<resources>
    <string name="app_name">ToDo</string>
    <string name="job_id">Job ID</string>
    <string name="date">Date</string>
    <string name="set_importance">Priority No.</string>
    <string name="job_des">Enter Job Description</string>
    <string name="sel_mch1">Select Machine 1</string>
    <string name="sel_mch2">Select Machine 2</string>
    <string name="but_job_sub">Submit</string>
    <string name="add_job">Add New Job</string>
    <string name="bar_home">Home</string>
    <string name="noti_title">Notifications</string>
    <string name="bar_job">Job List</string>
    <string name="bar_machine">Machines</string>
    <string name="bar_resource">Resources</string>
    <string name="bar_resource_inventory">Inventory</string>
    <string name="bar_resource_wip">Work in Progress</string>
    <string name="bar_message">Messages</string>
    <string name="inventory_title">Inventory</string>
    <string name="wip_title">Work In Progress</string>
    <string name="employee_title">Employees</string>
    <string name="end_but">Click To Complete</string>
    <string-array name="Graphs">
        <item>Select a Graph</item>
        <item>Estimated vs Actual Time</item>
        <item>Mocha</item>
    </string-array>
    <string-array name="TimeIncrements">
        <item>Time Period</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>


    <string name="resource_title">Gold</string>
    <string name="resource_body">Gold is a chemical element with symbol Au and atomic number 79.
        In its purest form, it is a bright, slightly reddish yellow, dense, soft, malleable,
        and ductile metal. Chemically, gold is a transition metal and a group 11 element.
        It is one of the least reactive chemical elements and is solid under standard conditions.
        Gold often occurs in free elemental (native) form, as nuggets or grains, in rocks, in veins,
        and in alluvial deposits. It occurs in a solid solution series with the native element silver
        (as electrum) and also naturally alloyed with copper and palladium. Less commonly,
        it occurs in minerals as gold compounds, often with tellurium (gold tellurides).</string>
    <string name="bar_quality">Quality</string>
    <string name="bar_overview">Overview</string>
    <string name="bar_instruct">Instructions</string>
    <string name="bar_safety">Safety</string>
    <string name="add_message">add new message</string>
    <string name="sender_id">Name of Sender</string>
    <string name="message_body">Start Message</string>
    <string name="msg_title">Enter Message Title</string>
    <string name="recipient_id">Name of Recipient</string>
    <string name="login_scan">Scan To Login</string>
    <string name="login_bypass">Bypass Login</string>
    <string name="confirm_login">Confirm Login</string>
    <string name="logo">Logo</string>
    <string name="user_pic">User Pic</string>
    <string name="user_name">Name</string>
    <string name="user_id">ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
