<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="515dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="515dp">

        <EditText
            android:id="@+id/job_ID"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/job_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/date_now"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/job_des"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/job_ID"
            android:layout_toRightOf="@+id/job_ID"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" />

        <EditText
            android:id="@+id/job_des"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/job_ID"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/job_des"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/first_machine"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/job_des"
            android:ems="10"
            android:hint="@string/sel_mch1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/second_machine"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/job_des"
            android:ems="10"
            android:hint="@string/sel_mch2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/job_imp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/job_des"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/set_importance"
            android:inputType="number" />

        <Button
            android:id="@+id/but_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_job_sub"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp" />

    </RelativeLayout>

</LinearLayout>