<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="515dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/mess_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/but_sub"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/senderID"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/message_body"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/recID"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipient_id"
            android:inputType="textPersonName"
            android:layout_alignBaseline="@+id/date"
            android:layout_alignBottom="@+id/date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/senderID"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sender_id"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/senderID"
            android:layout_alignBottom="@+id/senderID"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" />

        <Button
            android:id="@+id/but_msg_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp"
            android:text="@string/but_job_sub" />

    </RelativeLayout>

</LinearLayout>